--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^4.6.2",
+    "bootstrap-datepicker": "^1.10.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
