--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/Shop/"
             },
             "development": {
               "buildOptimizer": false,
